--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,11 @@
     <groupId>org.hsbc</groupId>
     <artifactId>hsbc-project2</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <docker.maven.plugin.version>0.19.0</docker.maven.plugin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.apache.spark</groupId>
