--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,23 @@
     <groupId>org.hsbc</groupId>
     <artifactId>hsbc-project2</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>main.Main.MainClass</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <properties>
         <docker.maven.plugin.version>0.19.0</docker.maven.plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
